syntax = "proto3";

package place.service.update;

option go_package = "github.com/knighthell/knighthell-boilerplate-idl-proto/domain/place";

import "place.proto";

service PlaceUpdateService {
  rpc UpdatePlaceList(UpdatePlaceListRequest) returns (UpdatePlaceListResponse);
}

message UpdatePlaceListRequest {

  message Place {
    string placeId = 1;

    optional string name = 2; // 장소(Place)의 원래 이름(No Localization Name)
    optional double latitude = 3; // 장소(Place)의 위도
    optional double longitude = 4; // 장소(Place)의 경도
  }
  repeated Place places = 1;
}

message UpdatePlaceListResponse {
  repeated place.Place results = 2;
}